Fixed wrong color scheme in green theme

--- a/src/_green.less
+++ b/src/_green.less
@@ -1,4 +1,4 @@
-@set-theme: 'default'; 		// default/yellow/dark/grey/green/orange/pink/blue
+@set-theme: 'green'; 		// default/yellow/dark/grey/green/orange/pink/blue
 
 // @set-font: 'sans'; 			// sans/serif/mono?
 // @set-appearance: 'system';	// system/light/dark
