--- a/stylesheets/Daily Driver-green.less
+++ b/stylesheets/Daily Driver-green.less
@@ -645,7 +645,7 @@ item[data----]
 
 // src: _green.less
 
-@set-theme: 'default'; 		// default/yellow/dark/grey/green/orange/pink/blue
+@set-theme: 'green'; 		// default/yellow/dark/grey/green/orange/pink/blue
 
 // @set-font: 'sans'; 			// sans/serif/mono?
 // @set-appearance: 'system';	// system/light/dark
